refactor(crossplane): rename SQSQueue to XQueue and update provider versions
- Renamed XRD and Composition from SQSQueue to XQueue for generic naming
- Updated provider packages for DynamoDB, S3, and SQS to v1.21.1
- Removed legacy 'apps' cluster logic from Makefile and README
- Cleaned up unused .gitkeep file and renamed CRDs to xrds directory

--- a/argocd/crossplane-system.yaml
+++ b/argocd/crossplane-system.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: "git@github.com:wnqueiroz/platform-engineering-backstack.git"
-    targetRevision: feature-upstream
+    targetRevision: main
     path: crossplane
     directory:
       recurse: true
