feat(backstage): bootstrap deployment with manifests and startup script
Add Kubernetes manifests for Backstage and PostgreSQL, including Deployment, Service, Secrets,
and ConfigMap. Introduce `.bootstrap/backstage/up.sh` to automate image build, context switching,
and resource application with port-forwarding. Update Makefile to integrate Backstage into the
`make up` flow and enhance `app-config.production.yaml` with CORS and guest auth settings.

--- a/backstage/app-config.production.yaml
+++ b/backstage/app-config.production.yaml
@@ -13,6 +13,9 @@ backend:
   # all interfaces, the most permissive setting. The right value depends on your specific deployment.
   listen: ':7007'
 
+  cors:
+    origin: http://localhost:7007
+
   # config options: https://node-postgres.com/apis/client
   database:
     client: pg
@@ -30,7 +33,9 @@ backend:
 
 auth:
   providers:
-    guest: {}
+    # See https://backstage.io/docs/auth/guest/provider
+    guest:
+      dangerouslyAllowOutsideDevelopment: true # Development purposes
 
 catalog:
   # Overrides the default list locations from app-config.yaml as these contain example data.
