feat(backstage): scaffold XQueueClaim template with PR automation
- Add Makefile for simplified local Backstage start
- Register new template in app-config.yaml
- Introduce XQueueClaim scaffolder template with parameters and validations
- Automate PR creation with generated claim YAML in target repo

--- a/backstage/app-config.yaml
+++ b/backstage/app-config.yaml
@@ -88,6 +88,12 @@ catalog:
       rules:
         - allow: [Template]
 
+    # Local example template
+    - type: file
+      target: ../../catalog/templates/xqueue-claim/template.yaml
+      rules:
+        - allow: [Template]
+
     # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
