refactor(backstage): simplify dev bootstrap and use remote catalog templates
- Always rebuild the Backstage Docker image to ensure consistency during local development
- Remove references to local example files in app-configs
- Use remote GitHub URL for centralized catalog templates
- Add NODE_OPTIONS to ConfigMap to prevent node snapshot issues

--- a/.bootstrap/backstage/manifests/config-map.yaml
+++ b/.bootstrap/backstage/manifests/config-map.yaml
@@ -4,5 +4,6 @@ metadata:
   name: backstage-config
   namespace: backstage-system
 data:
+  NODE_OPTIONS: --no-node-snapshot
   POSTGRES_HOST: postgres.backstage-system.svc.cluster.local
   POSTGRES_PORT: "5432"
