--- a/.github/workflows/validate-claims.yaml
+++ b/.github/workflows/validate-claims.yaml
@@ -20,8 +20,9 @@ jobs:
       - name: Install Kyverno CLI
         run: |
           curl -LO https://github.com/kyverno/kyverno/releases/download/v1.12.0/kyverno-cli_v1.12.0_linux_x86_64.tar.gz
-          tar -xvf kyverno-cli_v1.12.0_linux_x86_64.tar.gz
-          sudo mv kyverno /usr/local/bin/
+          mkdir -p /tmp/kyverno-cli
+          tar -xvf kyverno-cli_v1.12.0_linux_x86_64.tar.gz -C /tmp/kyverno-cli
+          sudo mv /tmp/kyverno-cli/kyverno /usr/local/bin/
           kyverno version
 
       - name: Run Kyverno policy checks on claims
