fix(ci): include stderr in Kyverno CLI output to capture validation errors in workflow summary
Redirects stderr to stdout during Kyverno validation to ensure all messages are recorded in result.txt.

--- a/.github/workflows/validate-claims.yaml
+++ b/.github/workflows/validate-claims.yaml
@@ -32,7 +32,7 @@ jobs:
           echo '```' >> $GITHUB_STEP_SUMMARY
 
           set +e
-          kyverno apply ./kyverno --resource ./crossplane/claims | tee result.txt
+          kyverno apply ./kyverno --resource ./crossplane/claims 2>&1 | tee result.txt
           KYVERNO_EXIT_CODE=${PIPESTATUS[0]}
           set -e
 
