--- a/crossplane/compositions/aws/xqueue.yaml
+++ b/crossplane/compositions/aws/xqueue.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: XQueue
+  name: xqueue
 spec:
   mode: Pipeline
   pipeline:
