--- a/backstage/app-config.production.yaml
+++ b/backstage/app-config.production.yaml
@@ -53,7 +53,7 @@ catalog:
     entityFilename: catalog-info.yaml
     pullRequestBranchName: backstage-integration
   rules:
-    - allow: [Component, System, API, Resource, Location]
+    - allow: ['*']
   locations:
     # All Templates
     - type: url
