--- a/.bootstrap/backstage/manifests/rbac.yaml
+++ b/.bootstrap/backstage/manifests/rbac.yaml
@@ -70,3 +70,25 @@ subjects:
   - kind: ServiceAccount
     name: backstage-user
     namespace: backstage-system
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: backstage-k8s-pod-actions
+rules:
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: backstage-k8s-pod-actions-binding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: backstage-k8s-pod-actions
+subjects:
+  - kind: ServiceAccount
+    name: backstage-user
+    namespace: backstage-system
