feat(catalog, backstage): add Crossplane entity provider for claims auto-registration
Introduced a custom CrossplaneEntityProvider to auto-register XQueueClaim resources from Kubernetes
clusters into the Backstage catalog. Includes setup logic, scheduler integration, and custom entity
transformation for catalog ingestion. Also updated `app-config.local.yaml` setup and improved local
Makefile flow.

--- a/backstage/catalog/components.yaml
+++ b/backstage/catalog/components.yaml
@@ -2,7 +2,15 @@ apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
   name: backstage
-  description: Represents the Backstage developer portal ecosystem
+  description: Represents the Backstage developer portal ecosystem.
+spec:
+  owner: guests
+---
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: infrastructure
+  description: Manages infrastructure resources provisioned through Crossplane across environments and cloud accounts.
 spec:
   owner: guests
 ---
