feat(localstack): add Backstage annotations and catalog entities for LocalStack integration
Added `backstage.io/kubernetes-id` and `backstage.io/kubernetes-namespace` annotations to LocalStack
manifests to enable Kubernetes plugin discovery. Also registered LocalStack as a System and Component
in the Backstage catalog to improve visibility and support infrastructure simulation in dev workflows.

--- a/.bootstrap/localstack/manifests/deployment.yaml
+++ b/.bootstrap/localstack/manifests/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: localstack
   labels:
     app: localstack
+    backstage.io/kubernetes-id: localstack
+    backstage.io/kubernetes-namespace: localstack-system
 spec:
   replicas: 1
   selector:
@@ -13,6 +15,8 @@ spec:
     metadata:
       labels:
         app: localstack
+        backstage.io/kubernetes-id: localstack
+        backstage.io/kubernetes-namespace: localstack-system
     spec:
       containers:
         - name: localstack
