feat(argocd, backstage): add ArgoCD manifests and catalog components
- Add deployment and service manifests for argocd-server
- Update bootstrap script to patch deployment and service
- Register ArgoCD system and component in Backstage catalog

--- a/backstage/catalog/components.yaml
+++ b/backstage/catalog/components.yaml
@@ -23,6 +23,14 @@ spec:
   owner: guests
 ---
 apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: argocd
+  description: TODO
+spec:
+  owner: guests
+---
+apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: backstage
@@ -64,3 +72,16 @@ spec:
   lifecycle: production
   owner: guests
   system: localstack
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: argocd-server
+  description: TODO
+  annotations:
+    backstage.io/kubernetes-id: argocd-server
+spec:
+  type: service
+  lifecycle: production
+  owner: guests
+  system: argocd
