refactor(argocd): rename crossplane-claims.yaml to apps.yaml and split Crossplane app config

--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -1,20 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane-claims
+  name: apps
   namespace: argocd-system
 spec:
   project: default
   source:
     repoURL: git@github.com:wnqueiroz/platform-engineering-backstack.git
-    targetRevision: main
-    path: crossplane/claims
+    targetRevision: feature-argocd
+    # targetRevision: HEAD
+    path: argocd/apps
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: crossplane-system
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
