fix(argocd, sqs): update targetRevision to feature-argocd and correct SQS provider package

--- a/argocd/crossplane-system.yaml
+++ b/argocd/crossplane-system.yaml
@@ -35,7 +35,8 @@ spec:
       project: default
       source:
         repoURL: git@github.com:wnqueiroz/platform-engineering-backstack.git
-        targetRevision: main
+        targetRevision: feature-argocd
+        # targetRevision: HEAD
         path: "{{path}}"
         directory:
           recurse: true
