refactor(crossplane, kyverno, localstack): clean up manifests and adjust ArgoCD apps
- Remove unused Crossplane example manifests
- Install Kyverno via ArgoCD Helm chart
- Refactor LocalStack app to use external values.yaml
- Update ArgoCD namespace reference to argocd-system

--- a/argocd/apps/kyverno/app.yaml
+++ b/argocd/apps/kyverno/app.yaml
@@ -1,21 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: localstack-app
+  name: kyverno-app
   namespace: argocd-system
 spec:
   project: default
   source:
-    repoURL: https://localstack.github.io/helm-charts
-    chart: localstack
-    targetRevision: 0.6.7
+    repoURL: https://kyverno.github.io/kyverno
+    chart: kyverno
+    targetRevision: 3.4.0
     helm:
-      releaseName: localstack
-      valueFiles:
-        - values.yaml
+      releaseName: kyverno
   destination:
     server: https://kubernetes.default.svc
-    namespace: localstack-system
+    namespace: kyverno-system
   syncPolicy:
     automated:
       prune: true
