--- a/argocd/apps.yaml
+++ b/argocd/apps.yaml
@@ -14,7 +14,7 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: argocd-system
   syncPolicy:
     automated:
       prune: true
