feat(backstage): improve secret handling and environment configuration
- Replace hardcoded secret placeholder with runtime environment injection
- Add .env.example file to guide token configuration
- Update .gitignore to ignore local .env files
- Configure ArgoCD to ignore differences in managed secrets
- Improve backstage up.sh to apply secrets dynamically

--- a/.bootstrap/backstage/manifests/secrets.yaml
+++ b/.bootstrap/backstage/manifests/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: backstage-system
 type: Opaque
 data:
-  GITHUB_TOKEN: VG9rZW5Ub2tlblRva2VuVG9rZW5NYWxrb3ZpY2hUb2tlbg==
+  GITHUB_TOKEN: <placeholder>
 ---
 apiVersion: v1
 kind: Secret
