chore(argocd): update targetRevision to HEAD in ArgoCD app definitions
Switched from using the feature-argocd branch to HEAD for apps.yaml,
backstage, and crossplane-system applications to always track the latest commit.

--- a/argocd/apps/backstage/app.yaml
+++ b/argocd/apps/backstage/app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: git@github.com:wnqueiroz/platform-engineering-backstack.git
-    targetRevision: feature-argocd
+    targetRevision: HEAD
     path: .bootstrap/backstage/manifests
     directory:
       recurse: true
