--- a/argocd/crossplane-system.yaml
+++ b/argocd/crossplane-system.yaml
@@ -35,8 +35,7 @@ spec:
       project: default
       source:
         repoURL: git@github.com:wnqueiroz/platform-engineering-backstack.git
-        targetRevision: feature-argocd
-        # targetRevision: HEAD
+        targetRevision: HEAD
         path: "{{path}}"
         directory:
           recurse: true
