--- a/backstage/packages/app/package.json
+++ b/backstage/packages/app/package.json
@@ -14,31 +14,33 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
-    "@backstage/app-defaults": "^1.6.1",
-    "@backstage/canon": "^0.3.0",
-    "@backstage/catalog-model": "^1.7.3",
-    "@backstage/cli": "^0.32.0",
-    "@backstage/core-app-api": "^1.16.1",
-    "@backstage/core-components": "^0.17.1",
-    "@backstage/core-plugin-api": "^1.10.6",
-    "@backstage/integration-react": "^1.2.6",
-    "@backstage/plugin-api-docs": "^0.12.6",
-    "@backstage/plugin-catalog": "^1.29.0",
-    "@backstage/plugin-catalog-common": "^1.1.3",
-    "@backstage/plugin-catalog-graph": "^0.4.18",
-    "@backstage/plugin-catalog-import": "^0.12.13",
-    "@backstage/plugin-catalog-react": "^1.17.0",
-    "@backstage/plugin-kubernetes": "^0.12.6",
-    "@backstage/plugin-org": "^0.6.38",
-    "@backstage/plugin-permission-react": "^0.4.33",
-    "@backstage/plugin-scaffolder": "^1.30.0",
-    "@backstage/plugin-search": "^1.4.25",
-    "@backstage/plugin-search-react": "^1.8.8",
-    "@backstage/plugin-techdocs": "^1.12.5",
-    "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.23",
-    "@backstage/plugin-techdocs-react": "^1.2.16",
-    "@backstage/plugin-user-settings": "^0.8.21",
-    "@backstage/theme": "^0.6.5",
+    "@backstage/app-defaults": "^1.7.4",
+    "@backstage/catalog-model": "^1.7.6",
+    "@backstage/cli": "^0.35.3",
+    "@backstage/core-app-api": "^1.19.4",
+    "@backstage/core-components": "^0.18.6",
+    "@backstage/core-plugin-api": "^1.12.2",
+    "@backstage/integration-react": "^1.2.14",
+    "@backstage/plugin-api-docs": "^0.13.3",
+    "@backstage/plugin-catalog": "^1.32.2",
+    "@backstage/plugin-catalog-common": "^1.1.7",
+    "@backstage/plugin-catalog-graph": "^0.5.6",
+    "@backstage/plugin-catalog-import": "^0.13.9",
+    "@backstage/plugin-catalog-react": "^1.21.6",
+    "@backstage/plugin-kubernetes": "^0.12.15",
+    "@backstage/plugin-notifications": "^0.5.13",
+    "@backstage/plugin-org": "^0.6.48",
+    "@backstage/plugin-permission-react": "^0.4.39",
+    "@backstage/plugin-scaffolder": "^1.35.2",
+    "@backstage/plugin-search": "^1.5.3",
+    "@backstage/plugin-search-react": "^1.10.2",
+    "@backstage/plugin-signals": "^0.0.27",
+    "@backstage/plugin-techdocs": "^1.16.2",
+    "@backstage/plugin-techdocs-module-addons-contrib": "^1.1.32",
+    "@backstage/plugin-techdocs-react": "^1.3.7",
+    "@backstage/plugin-user-settings": "^0.8.31",
+    "@backstage/theme": "^0.7.1",
+    "@backstage/ui": "^0.11.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "react": "^18.0.2",
@@ -47,7 +49,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@backstage/test-utils": "^1.7.7",
+    "@backstage/test-utils": "^1.7.14",
     "@playwright/test": "^1.32.3",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
